--- a/RabbitMQ-Microservices/RabbitMQServices.Infra.IoC/RabbitMQServices.Infra.IoC.csproj
+++ b/RabbitMQ-Microservices/RabbitMQServices.Infra.IoC/RabbitMQServices.Infra.IoC.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RabbitMQMicroservices.Domain.Core\RabbitMQMicroservices.Domain.Core.csproj" />
+    <ProjectReference Include="..\RabbitMQMicroservices.Infra.Bus\RabbitMQMicroservices.Infra.Bus.csproj" />
+  </ItemGroup>
+
 </Project>
