--- a/RabbitMQ-Microservices/RabbitMQServices.Infra.IoC/RabbitMQServices.Infra.IoC.csproj
+++ b/RabbitMQ-Microservices/RabbitMQServices.Infra.IoC/RabbitMQServices.Infra.IoC.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RabbitMQMicroservices.Banking.Application\RabbitMQMicroservices.Banking.Application.csproj" />
+    <ProjectReference Include="..\RabbitMQMicroservices.Banking.Infrastructure\RabbitMQMicroservices.Banking.Infrastructure.csproj" />
     <ProjectReference Include="..\RabbitMQMicroservices.Domain.Core\RabbitMQMicroservices.Domain.Core.csproj" />
     <ProjectReference Include="..\RabbitMQMicroservices.Infra.Bus\RabbitMQMicroservices.Infra.Bus.csproj" />
   </ItemGroup>
